--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--去掉ActionBar-->
+    <style name="fullScreen" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!--隐藏状态栏方式3-->
+        <!--<item name="android:windowFullscreen">true</item>-->
+    </style>
+
+    <!--使ActionBar与状态栏颜色保持一致-->
+    <style name="status_toolbar_same_color" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/status_toolBar_same_color</item>
+        <item name="colorPrimaryDark">@color/status_toolBar_same_color</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
